@@ -86,6 +86,16 @@ be_visitor_valuetype_cs::visit_valuetype (be_valuetype *node)
           << "{" << be_idt_nl
           << "CORBA::remove_ref (p);" << be_uidt_nl
           << "}";
+
+      *os << be_nl << be_nl
+          << "void" << be_nl
+          << "TAO::Value_Traits<" << node->name () << ">::tao_release ("
+          << be_idt << be_idt_nl
+          << node->name () << " * p" << be_uidt_nl
+          << ")" << be_uidt_nl
+          << "{" << be_idt_nl
+          << "CORBA::remove_ref (p);" << be_uidt_nl
+          << "}";
     }
 
   // The _downcast method    // %! use ACE_xxx_cast here ?
