@@ -1,3 +1,14 @@
+Thu Oct 30 22:09:17 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_visitor_traits.cpp:
+        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:
+
+          Added tao_release() to the generated Value_Traits<> specialization,
+          so the INOUT argument template helper class can release the argument
+          at demarshal time with the same call for both interface and
+          valuetypes. This extra method has already been added to
+          CORBA::ValueBase.
+
 Thu Oct 30 15:01:43 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* orbsvcs/orbsvcs/AV/Endpoint_Strategy_T.cpp:
